--- a/docs/thecoffeeserver/The Coffee Server - Report.tex
+++ b/docs/thecoffeeserver/The Coffee Server - Report.tex
@@ -289,7 +289,7 @@ This section presents and analyzes the different heuristic functions proposed fo
 \end{enumerate}
 We study each case separately.
 
-\subsection{Choosing an operator} \label{Choosing an Operator}
+\subsection{Choosing an Operator} \label{Choosing an Operator}
 
 When the top element of the stack is a predicate that is not contained in the current state, the STRIPS algorithm looks for an operator that adds this predicate to the current state. In a general example, it could be the case that there were several operators that had that predicate in their postcondition list, some of them perhaps representing a better choice than others. In that case, after studying the specific problem, we may be able to design an intelligent strategy to choose the most appropriate operator. 
 
